--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Getting Started Example",
   "version": "1.0",
   "description": "Build an Extension!",
-  "permissions": ["activeTab", "storage", "webRequest", "*://static.parastorage.com/*", "webRequestBlocking"],
+  "permissions": ["activeTab", "storage", "webRequest", "*://static.parastorage.com/*", "tabs", "<all_urls>", "webRequestBlocking"],
   "options_page": "options.html",
   "background": {
     "scripts": ["background.js"]
